--- a/man/man1/git-sync.1
+++ b/man/man1/git-sync.1
@@ -14,7 +14,7 @@ Synchronizes the current branch with the rest of the world.
 .PP
 When run on a feature branch
 .br
-* syncs all ancestor branches including the main branch
+* syncs all ancestor branches
 .br
 * pulls updates for the current branch
 .br
