--- a/man/man1/git-hack.1
+++ b/man/man1/git-hack.1
@@ -5,7 +5,7 @@ git hack \- create a new feature branch
 
 
 .SH "SYNOPSIS"
-\fIgit hack\fR <branchname> [parent branch name]
+\fIgit hack\fR <branchname> [<parent branch name>]
 .br
 \fIgit hack\fR (--abort | --continue)
 
