--- a/man/man1/git-hack.1
+++ b/man/man1/git-hack.1
@@ -1,17 +1,22 @@
 .TH "GIT-HACK" "1" "04/02/2015" "Git Town 0\&.6\&.0" "Git Town Manual"
 
 .SH "NAME"
-git hack \- cut a new feature branch off the main branch
+git hack \- create a new feature branch
+
 
 .SH "SYNOPSIS"
-\fIgit hack\fR <branchname> [parent branch name]
+\fIgit hack\fR <branchname> [<parent branch name>]
 .br
 \fIgit hack\fR (--abort | --continue)
 
+
 .SH "DESCRIPTION"
-Sync the main branch and create a new feature branch with the given name.
+Syncs the given parent branch,
 .br
-Brings over all uncommitted changes.
+forks a new feature branch with the given name off it,
+.br
+and brings over all uncommitted changes to the new feature branch.
+
 
 .SH "OPTIONS"
 .IP "<branchname>" 4
@@ -21,6 +26,8 @@ The name of the branch to create.
 If provided, cuts the new branch off the given existing feature branch.
 .br
 Providing '.' here uses the current branch as the parent branch.
+.br
+If omitted, uses the main branch as the parent.
 
 .IP "--abort" 4
 Cancel the operation and reset the workspace to a consistent state.
