--- a/man/man1/git-new-pull-request.1
+++ b/man/man1/git-new-pull-request.1
@@ -3,10 +3,15 @@
 .SH "NAME"
 git-new-pull-request \- create a new pull request
 
+
 .SH "SYNOPSIS"
 \fIgit new-pull-request\fR
 
+
 .SH "DESCRIPTION"
-Opens a browser to a new pull request for the current branch.
+Opens a browser window to the form for a new pull request page
+for the current branch on the code hosting platform.
+.br
+The pull request only shows the changes made against the immediate parent branch.
 .br
 Supported only for repositories hosted on GitHub and Bitbucket.
