git ship: document entering commit message

--- a/man/man1/git-ship.1
+++ b/man/man1/git-ship.1
@@ -22,6 +22,8 @@ into the main branch, leading to linear history on the main branch.
 .br
 * squash-merges <branch_name> into the main branch
 .br
+* opens an editor for the user to enter the commit message for the squash merge
+.br
 * pushes the main branch to the remote repository
 .br
 * deletes <branch_name> from the local and remote repositories
