--- a/man/man1/git-ship.1
+++ b/man/man1/git-ship.1
@@ -20,9 +20,7 @@ into the main branch, leading to linear history on the main branch.
 .br
 * merges the main branch into <branch_name>
 .br
-* squash-merges <branch_name> into the main branch
-.br
-* opens an editor for the user to enter the commit message for the squash merge
+* squash-merges <branch_name> into the main branch with commit message specified by the user
 .br
 * pushes the main branch to the remote repository
 .br
