--- a/man/man1/git-ship.1
+++ b/man/man1/git-ship.1
@@ -12,7 +12,7 @@ git ship \- deliver a completed feature branch
 
 .SH "DESCRIPTION"
 Squash merges the current branch, or <branch_name> if given,
-into the main branch, leading to linear history on the main branch.
+into the main branch, resulting in linear history on the main branch.
 .PP
 * syncs the main branch
 .br
