git ship: document entering commit message
closes #626

--- a/man/man1/git-ship.1
+++ b/man/man1/git-ship.1
@@ -20,7 +20,7 @@ into the main branch, resulting in linear history on the main branch.
 .br
 * merges the main branch into <branch_name>
 .br
-* squash-merges <branch_name> into the main branch
+* squash-merges <branch_name> into the main branch with commit message specified by the user
 .br
 * pushes the main branch to the remote repository
 .br
