--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -1,7 +1,7 @@
 .TH "GIT-TOWN" "1" "09/02/2015" "Git Town 0\&.7\&.3" "Git Town Manual"
 
 .SH "SYNOPSIS"
-\fIgit town\fR config [--reset]
+\fIgit town\fR config [--reset | --setup]
 .br
 \fIgit town\fR help
 .br
@@ -52,7 +52,10 @@ You may also manually view and modify the configurations:
 Displays your current Git Town configuration
 
 .IP "git town config --reset" 4
-Remove all Git Town configuration from the current repository
+Cleanly remove all Git Town configuration from the current repository
+
+.IP "git town config --setup" 4
+Run the Git Town configuration wizard
 
 .IP "git town install-fish-autocompletion" 4
 Installs the autocompletion definition for Fish shell
