--- a/man/man1/git-new-pull-request.1
+++ b/man/man1/git-new-pull-request.1
@@ -10,7 +10,7 @@ git-new-pull-request \- create a new pull request
 
 .SH "DESCRIPTION"
 Syncs the current branch,
-opens a browser window to the form for a new pull request page
+and opens a browser window to the form for a new pull request page
 for the current branch on the code hosting platform.
 .br
 The pull request only shows the changes made against the immediate parent branch.
