Add pushing to documentation

--- a/man/man1/git-hack.1
+++ b/man/man1/git-hack.1
@@ -11,11 +11,13 @@ git hack \- create a new feature branch
 
 
 .SH "DESCRIPTION"
-Syncs the given parent branch,
+Syncs the given parent branch (default: main branch),
 .br
 forks a new feature branch with the given name off it,
 .br
-and brings over all uncommitted changes to the new feature branch.
+brings over all uncommitted changes to the new feature branch,
+.br
+and pushes everything to the remote repository.
 
 
 .SH "OPTIONS"
