--- a/man/man1/git-hack.1
+++ b/man/man1/git-hack.1
@@ -15,9 +15,9 @@ Syncs the given parent branch (default: main branch),
 .br
 forks a new feature branch with the given name off it,
 .br
-brings over all uncommitted changes to the new feature branch,
+pushes the new feature branch to the remote repository,
 .br
-and pushes everything to the remote repository.
+and brings over all uncommitted changes to the new feature branch.
 
 
 .SH "OPTIONS"
