git-hack pushes new branches
closes #667
resolves #664

--- a/man/man1/git-hack.1
+++ b/man/man1/git-hack.1
@@ -11,9 +11,11 @@ git hack \- create a new feature branch
 
 
 .SH "DESCRIPTION"
-Syncs the given parent branch,
+Syncs the given parent branch (default: main branch),
 .br
 forks a new feature branch with the given name off it,
+.br
+pushes the new feature branch to the remote repository,
 .br
 and brings over all uncommitted changes to the new feature branch.
 
