--- a/man/man1/git-sync.1
+++ b/man/man1/git-sync.1
@@ -31,6 +31,10 @@ When run on the main branch or a perennial branch
 .br
 * pushes tags
 
+.PP
+When there is a remote `upstream`
+.br
+* syncs the main branch with its upstream
 
 .SH "OPTIONS"
 .IP "--all" 4
