--- a/man/man1/git-sync.1
+++ b/man/man1/git-sync.1
@@ -32,9 +32,9 @@ When run on the main branch or a perennial branch
 * pushes tags
 
 .PP
-When there is a remote `upstream`
+Additionally, when there is a remote upstream,
 .br
-* syncs the main branch with its upstream
+the main branch is synced with its upstream counterpart.
 
 .SH "OPTIONS"
 .IP "--all" 4
