update git hack verbiage

--- a/man/man1/git-hack.1
+++ b/man/man1/git-hack.1
@@ -22,7 +22,9 @@ pushes the new feature branch to the remote repository,
 and brings over all uncommitted changes to the new feature branch.
 
 .PP
-When there is a remote "upstream", the main branch is synced with it upstream.
+Additionally, when there is a remote upstream,
+.br
+the main branch is synced with its upstream counterpart.
 
 .SH "OPTIONS"
 .IP "<branch_name>" 4
