git sync: support forked repos
closes #686

--- a/man/man1/git-sync.1
+++ b/man/man1/git-sync.1
@@ -31,6 +31,10 @@ When run on the main branch or a perennial branch
 .br
 * pushes tags
 
+.PP
+Additionally, when there is a remote upstream,
+.br
+the main branch is synced with its upstream counterpart.
 
 .SH "OPTIONS"
 .IP "--all" 4
