Include rename-branch git town help command list

--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -29,6 +29,8 @@ For more information and full documentation, please visit: \fihttps://github.com
 .br
 \fBgit prune-branches\fR    Delete merged branches
 .br
+\fBgit rename-branch\fR     Rename a branch both locally and remotely
+.br
 \fBgit repo\fR              View the repository homepage
 .br
 \fBgit ship\fR              Deliver a completed feature branch
