--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -80,3 +80,4 @@ Displays your pull branch strategy
 
 .IP "git town pull-branch-strategy <strategy>" 4
 Set your pull branch strategy as <strategy>
+Valid strategy values: 'merge', 'rebase'.
