--- a/man/man1/git-hack.1
+++ b/man/man1/git-hack.1
@@ -25,6 +25,11 @@ and brings over all uncommitted changes to the new feature branch.
 Additionally, when there is a remote upstream,
 .br
 the main branch is synced with its upstream counterpart.
+.br
+This can be disabled by toggling the "hack-push-strategy" configuration:
+.br
+$ git town hack-push-strategy local
+
 
 .SH "OPTIONS"
 .IP "<branch_name>" 4
