--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -60,6 +60,11 @@ Run the Git Town configuration wizard
 .IP "git town install-fish-autocompletion" 4
 Installs the autocompletion definition for Fish shell
 
+.IP "git town hack-push-strategy <strategy>" 4
+Set your git-hack push strategy as <strategy>
+.br
+Valid strategy values: 'push' (default) and 'local'
+
 .IP "git town main-branch" 4
 Displays your main branch
 
@@ -80,4 +85,5 @@ Displays your pull branch strategy
 
 .IP "git town pull-branch-strategy <strategy>" 4
 Set your pull branch strategy as <strategy>
-Valid strategy values: 'merge', 'rebase'.
+.br
+Valid strategy values: 'rebase' (default) and 'merge'
