--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -3,6 +3,8 @@
 .SH "SYNOPSIS"
 \fIgit town\fR config [--reset | --setup]
 .br
+\fIgit town\fR hack-push-strategy [(push | local)]
+.br
 \fIgit town\fR help
 .br
 \fIgit town\fR install-fish-autocompletion
@@ -11,7 +13,7 @@
 .br
 \fIgit town\fR perennial-branches [(--add | --remove) <branch_name>]
 .br
-\fIgit town\fR pull-branch-strategy [(merge | rebase)]
+\fIgit town\fR pull-branch-strategy [(rebase | merge)]
 .br
 \fIgit town\fR version
 
