--- a/man/man1/git-hack.1
+++ b/man/man1/git-hack.1
@@ -26,9 +26,9 @@ Additionally, when there is a remote upstream,
 .br
 the main branch is synced with its upstream counterpart.
 .br
-This can be disabled by toggling the "hack-push-strategy" configuration:
+This can be disabled by toggling the "hack-push-flag" configuration:
 .br
-$ git town hack-push-strategy local
+$ git town hack-push-flag false
 
 
 .SH "OPTIONS"
