--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -73,6 +73,9 @@ Displays your main branch
 .IP "git town main-branch <branch_name>" 4
 Set your main branch to <branch_name>
 
+.IP "git town parent-branch <child_branch_name> <parent_branch_name>" 4
+Set the parent branch for <child_branch_name> as <parent_branch_name>
+
 .IP "git town perennial-branches" 4
 Displays your perennial branches
 
