--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -89,3 +89,6 @@ Displays your pull branch strategy
 Set your pull branch strategy as <strategy>
 .br
 Valid strategy values: 'rebase' (default) and 'merge'
+
+.IP "git town set-parent-branch <child_branch_name> <parent_branch_name>" 4
+Set the parent branch of <child_branch_name> to <parent_branch_name>
