remove name clash

--- a/man/man1/git-town-hack.1
+++ b/man/man1/git-town-hack.1
@@ -1,13 +1,13 @@
-.TH "GIT-HACK" "1" "08/05/2016" "Git Town 1\&.0\&.0" "Git Town Manual"
+.TH "GIT-TOWN-HACK" "1" "08/05/2016" "Git Town 1\&.0\&.0" "Git Town Manual"
 
 .SH "NAME"
-git hack \- create a new feature branch
+git town-hack \- create a new feature branch
 
 
 .SH "SYNOPSIS"
-\fIgit hack\fR <branch_name> [<parent_branch_name>]
+\fIgit town-hack\fR <branch_name> [<parent_branch_name>]
 .br
-\fIgit hack\fR (--abort | --continue)
+\fIgit town-hack\fR (--abort | --continue)
 
 
 .SH "DESCRIPTION"
