--- a/man/man1/git-town-ship.1
+++ b/man/man1/git-town-ship.1
@@ -1,13 +1,13 @@
-.TH "GIT-SHIP" "1" "08/05/2016" "Git Town 1\&.0\&.0" "Git Town Manual"
+.TH "GIT-TOWN-SHIP" "1" "08/05/2016" "Git Town 1\&.0\&.0" "Git Town Manual"
 
 .SH "NAME"
-git ship \- deliver a completed feature branch
+git town-ship \- deliver a completed feature branch
 
 
 .SH "SYNOPSIS"
-\fIgit ship\fR [<branch_name>] [<commit_options>]
+\fIgit town-ship\fR [<branch_name>] [<commit_options>]
 .br
-\fIgit ship\fR (--abort | --continue)
+\fIgit town-ship\fR (--abort | --continue)
 
 
 .SH "DESCRIPTION"
