--- a/man/man1/git-town-kill.1
+++ b/man/man1/git-town-kill.1
@@ -1,13 +1,13 @@
-.TH "GIT-KILL" "1" "08/05/2016" "Git Town 1\&.0\&.0" "Git Town Manual"
+.TH "GIT-TOWN-KILL" "1" "08/05/2016" "Git Town 1\&.0\&.0" "Git Town Manual"
 
 .SH "NAME"
-git kill \- remove an obsolete feature branch
+git town-kill \- remove an obsolete feature branch
 
 
 .SH "SYNOPSIS"
-\fIgit kill\fR [<branch_name>]
+\fIgit town-kill\fR [<branch_name>]
 .br
-\fIgit kill\fR --undo
+\fIgit town-kill\fR --undo
 
 
 .SH "DESCRIPTION"
