--- a/man/man1/git-town-new-pull-request.1
+++ b/man/man1/git-town-new-pull-request.1
@@ -1,11 +1,11 @@
-.TH "GIT-NEW-PULL-REQUEST" "1" "08/05/2016" "Git Town 1\&.0\&.0" "Git Town Manual"
+.TH "GIT-TOWN-NEW-PULL-REQUEST" "1" "08/05/2016" "Git Town 1\&.0\&.0" "Git Town Manual"
 
 .SH "NAME"
-git-new-pull-request \- create a new pull request
+git-town-new-pull-request \- create a new pull request
 
 
 .SH "SYNOPSIS"
-\fIgit new-pull-request\fR
+\fIgit town-new-pull-request\fR
 
 
 .SH "DESCRIPTION"
