--- a/man/man1/git-town-prune-branches.1
+++ b/man/man1/git-town-prune-branches.1
@@ -1,11 +1,11 @@
-.TH "GIT-PRUNE-BRANCHES" "1" "08/05/2016" "Git Town 1\&.0\&.0" "Git Town Manual"
+.TH "GIT-TOWN-PRUNE-BRANCHES" "1" "08/05/2016" "Git Town 1\&.0\&.0" "Git Town Manual"
 
 .SH "NAME"
-git-prune-branches \- delete merged branches
+git-town-prune-branches \- delete merged branches
 
 
 .SH "SYNOPSIS"
-\fIgit prune-branches\fR
+\fIgit town-prune-branches\fR
 
 
 .SH "DESCRIPTION"
