--- a/man/man1/git-town-repo.1
+++ b/man/man1/git-town-repo.1
@@ -1,11 +1,11 @@
-.TH "GIT-REPO" "1" "08/05/2016" "Git Town 1\&.0\&.0" "Git Town Manual"
+.TH "GIT-TOWN-REPO" "1" "08/05/2016" "Git Town 1\&.0\&.0" "Git Town Manual"
 
 .SH "NAME"
-git-repo \- view the repository homepage
+git-town-repo \- view the repository homepage
 
 
 .SH "SYNOPSIS"
-\fIgit repo\fR
+\fIgit town-repo\fR
 
 
 .SH "DESCRIPTION"
