--- a/man/man1/git-town-sync.1
+++ b/man/man1/git-town-sync.1
@@ -1,13 +1,13 @@
-.TH "GIT-SYNC" "1" "08/05/2016" "Git Town 1\&.0\&.0" "Git Town Manual"
+.TH "GIT-TOWN-SYNC" "1" "08/05/2016" "Git Town 1\&.0\&.0" "Git Town Manual"
 
 .SH "NAME"
-git sync \- update the current branch with all relevant changes
+git town-sync \- update the current branch with all relevant changes
 
 
 .SH "SYNOPSIS"
-\fIgit sync\fR [--all]
+\fIgit town-sync\fR [--all]
 .br
-\fIgit sync\fR (--abort | --continue | --skip)
+\fIgit town-sync\fR (--abort | --continue | --skip)
 
 
 .SH "DESCRIPTION"
