--- a/man/man1/git-town.1
+++ b/man/man1/git-town.1
@@ -52,11 +52,8 @@ of your current repository if they haven't been set.
 
 You may also manually view and modify the configurations:
 
-.IP "git town alias true" 4
-Add global aliases to remove the 'town-' prefix from all commands
-
-.IP "git town alias false" 4
-Remove global aliases to remove the 'town-' prefix from all commands
+.IP "git town alias <boolean>" 4
+Add/remove default global aliases to remove the 'town-' prefix from all commands
 
 .IP "git town config" 4
 Displays your current Git Town configuration
