Document SSH identity matching

--- a/man/man1/git-town-new-pull-request.1
+++ b/man/man1/git-town-new-pull-request.1
@@ -17,3 +17,8 @@ so that the pull request only shows the changes made
 against the immediate parent branch.
 .PP
 Supported only for repositories hosted on GitHub and Bitbucket.
+When using hosted versions of GitHub or Bitbucket,
+make sure that your SSH identity contains the phrase "github" or "bitbucket",
+so that Git Town can guess which hosting service you use.
+Example: your SSH identity should be something like
+"git@github-as-account1:Originate/git-town.git"
