--- a/man/man1/git-town-repo.1
+++ b/man/man1/git-town-repo.1
@@ -10,5 +10,10 @@ git-town-repo \- view the repository homepage
 
 .SH "DESCRIPTION"
 Opens a browser to the repository homepage.
-.br
+.PP
 Supported only for repositories hosted on GitHub and Bitbucket.
+When using hosted versions of GitHub or Bitbucket,
+make sure that your SSH identity contains the phrase "github" or "bitbucket",
+so that Git Town can guess which hosting service you use.
+Example: your SSH identity should be something like
+"git@github-as-account1:Originate/git-town.git"
