--- a/man/man1/git-town-append.1
+++ b/man/man1/git-town-append.1
@@ -13,7 +13,7 @@ git town-append \- create a new feature branch as a direct child of the current 
 .SH "DESCRIPTION"
 
 .PP
-Syncs the given branch,
+Syncs the current branch,
 .br
 forks a new feature branch with the given name off the current branch,
 .br
