add see also section in man page

--- a/man/man1/git-town-prepend.1
+++ b/man/man1/git-town-prepend.1
@@ -42,3 +42,8 @@ Cancel the operation and reset the workspace to a consistent state.
 
 .IP "--continue" 4
 Continue the operation after resolving conflicts.
+
+.SH "SEE ALSO"
+\fIgit town-append\fR to create a new feature branch as a child of the current branch
+.br
+\fIgit town-hack\fR to create a new top-level feature branch
